--- a/app/css/scss/_base.scss
+++ b/app/css/scss/_base.scss
@@ -1,3 +1,13 @@
+@keyframes pulse {
+    from {
+        transform: scale(1) rotate(0deg);
+    }
+
+    to {
+        transform: scale(1.2) rotate(2deg);
+    }
+}
+
 body {
     font-family: $font-fallback;
     overflow-x: hidden;
@@ -16,6 +26,11 @@ h1, h2, h3, h4, h5, h6 {
 
 a {
     text-decoration: none;
+}
+
+.logo, .singleimage {
+    max-width: 40rem;
+    width: 100%;
 }
 
 .center {
