--- a/app/css/scss/_button.scss
+++ b/app/css/scss/_button.scss
@@ -7,5 +7,7 @@ button {
 
     &[large] {
         font-size: 4rem;
+        text-transform: uppercase;
+        animation: pulse 1s infinite alternate;
     }
 }
